umol-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@indigo_ChEBI_13934_fixed.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: molecule
category: molecule
molecule:
  success: true
  summary:
    sum_formula: C113N2O77P2W
    atom_count: 195
    bond_count: 207
    property_count: 0
molecule_lenient:
  success: true
  summary:
    sum_formula: C113N2O77P2W
    atom_count: 195
    bond_count: 207
    property_count: 0
extended_molecule:
  success: true
  extended_summary:
    sum_formula: C113N2O77P2W
    atom_count: 195
    bond_count: 207
    extended_atoms: 0
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: C113N2O77P2W
    atom_count: 195
    bond_count: 207
    extended_atoms: 0
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
